--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "@Vele-Majstor/lite-react",
   "description": "Very lightweight React UI component library",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "author": "Hristijan Veleski",
   "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/Vele-Majstor"
+    "registry": "https://npm.pkg.github.com/Vele-Majstor",
+    "access": "public"
   },
   "type": "module",
   "scripts": {
+    "rollup": "rollup -c",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -23,12 +31,16 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@storybook/addon-essentials": "^7.4.0",
     "@storybook/addon-interactions": "^7.4.0",
     "@storybook/addon-links": "^7.4.0",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.4.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^7.4.0",
     "@storybook/react-vite": "^7.4.0",
     "@storybook/testing-library": "^0.2.0",
@@ -37,12 +49,18 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "rollup": "^4.1.1",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "storybook": "^7.4.0",
+    "style-loader": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
