--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@Vele-Majstor/lite-react",
+  "name": "@vele-majstor/lite-react",
   "description": "Very lightweight React UI component library",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "author": "Hristijan Veleski",
   "license": "MIT",
   "main": "dist/cjs/index.js",
@@ -31,6 +31,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
