--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Vele-Majstor/lite-react"
