--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vele-majstor/lite-react",
   "description": "Very lightweight React UI component library",
-  "version": "0.0.47",
+  "version": "0.0.5",
   "author": "Hristijan Veleski",
   "license": "MIT",
   "main": "dist/cjs/index.js",
@@ -11,7 +11,8 @@
   ],
   "types": "dist/index.d.ts",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/Vele-Majstor",
+    "registry": "https://registry.npmjs.org/",
+    "@Vele-Majstor:registry": "https://npm.pkg.github.com/",
     "access": "public"
   },
   "repository": {
