--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vele-majstor/lite-react",
   "description": "Very lightweight React UI component library",
-  "version": "0.0.66",
+  "version": "0.0.67",
   "author": "Hristijan Veleski",
   "license": "MIT",
   "main": "dist/cjs/index.js",
@@ -31,13 +31,9 @@
   },
   "dependencies": {
     "@types/react-transition-group": "^4.4.6",
-    "react-transition-group": "^4.4.5"
-  },
-  "peerDependencies": {
-    "@types/react-transition-group": "^4.4.6",
-    "react-transition-group": "^4.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.0.1",
