--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "name": "@vele-majstor/lite-react",
     "description": "Very lightweight React UI component library",
-    "version": "0.0.70",
-    "author": "Hristijan Veleski",
+    "version": "0.0.71",
+    "author": {
+        "name": "Hristijan Veleski"
+    },
     "license": "MIT",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
@@ -17,7 +19,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/Vele-Majstor/lite-react"
+        "url": "git+https://github.com/Vele-Majstor/lite-react.git"
     },
     "type": "module",
     "scripts": {
@@ -27,7 +29,8 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "chromatic": "npx chromatic --project-token=chpt_6f7898f3b70d1e3"
     },
     "dependencies": {
         "@types/react-transition-group": "^4.4.6",
@@ -45,6 +48,7 @@
         "@storybook/addon-interactions": "^7.4.0",
         "@storybook/addon-links": "^7.4.0",
         "@storybook/addon-onboarding": "^1.0.8",
+        "@storybook/addon-storysource": "^7.4.6",
         "@storybook/addon-styling": "^1.3.7",
         "@storybook/blocks": "^7.4.0",
         "@storybook/preset-scss": "^1.0.3",
@@ -56,6 +60,7 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.0.3",
+        "chromatic": "^7.4.0",
         "css-loader": "^6.8.1",
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
@@ -70,5 +75,11 @@
         "style-loader": "^3.3.3",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
-    }
+    },
+    "bugs": {
+        "url": "https://github.com/Vele-Majstor/lite-react/issues"
+    },
+    "readme": "ERROR: No README data found!",
+    "homepage": "https://github.com/Vele-Majstor/lite-react#readme",
+    "_id": "@vele-majstor/lite-react@0.0.70"
 }
