--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,30 +1,27 @@
 # .github/workflows/chromatic.yml
 
-# Workflow name
 name: "Chromatic Publish"
 
-# Event for the workflow
 on: push
 
-# List of jobs
 jobs:
   test:
-    # Operating System
     runs-on: ubuntu-latest
-    # Job steps
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          version: 8.7.0
       - uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: "pnpm"
       - run: pnpm
-      #👇 Adds Chromatic as a step in the workflow
+
       - uses: chromaui/action@v1
-        # Options required for Chromatic's GitHub Action
+
         with:
-          #👇 Chromatic projectToken,
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GPROJECT_TOKEN }}
