--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/action-setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 8.7.0
       - uses: actions/setup-node@v3
